k8s/gateway/kong-echo-service-gateway-api/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    konghq.com/publish-service: kong-public/kong-public-kong-proxy
  labels:
    app.kubernetes.io/managed-by: Helm
  name: kong
spec:
  gatewayClassName: kong
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: proxy
    port: 80
    protocol: HTTP
